Network-policy/utrains1-allow-from-web.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sfgtrain1-allow-from-web
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: sfgtrain
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
