Network-policy/web-allow-to-utrains.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-to-sfgtrain
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: web
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: sfgtrain
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
